# NitTray

./: .gitignore  DisplayDial.sln  NitTray.sln  README.md  THIRD-PARTY-NOTICES.md
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml
docs/: SIGNING.md
docs/public/: index.html  robots.txt
installer/: NitTray.iss
installer/winget/: LinkaiQi.NitTray.locale.en-US.yaml  LinkaiQi.NitTray.yaml
native/: .gitignore
native/DisplayDial.DriverSetup/: CMakeLists.txt  DisplayDial.DriverSetup.manifest  README.md  build.ps1  main.c  resources.rc
native/NitTray.DriverSetup/: CMakeLists.txt  NitTray.DriverSetup.manifest  README.md  build.ps1  main.c  resources.rc
packaging/winget/: LinkaiQi.NitTray.installer.yaml  README.md
public/: index.html  sitemap.xml
src/DisplayDial/: App.xaml  App.xaml.cs  DisplayDial.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/DisplayDial/Models/: AppleDisplays.cs  DisplayEnumerationResult.cs  PendingDriverSetup.cs  StudioDisplayInfo.cs
src/DisplayDial/Services/: DiagnosticLog.cs  DriverInstallResult.cs  DriverSetupExitCodes.cs  IDisplayService.cs  IDriverInstallService.cs  IconFactory.cs  StudioDisplayService.cs  WinUsbDriverInstallService.cs
src/DisplayDial/Tray/: TrayIconHost.cs
src/DisplayDial/ViewModels/: DisplayViewModel.cs  MainViewModel.cs  RelayCommand.cs
src/NitTray/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NitTray.csproj  app.manifest
src/NitTray/Models/: AppleDisplays.cs  DisplayEnumerationResult.cs  DisplayTransport.cs  PendingDriverSetup.cs  StudioDisplayInfo.cs
src/NitTray/Services/: AppleDisplayService.Devices.cs  AppleDisplayService.Enumeration.cs  AppleDisplayService.cs  DiagnosticLog.cs  DriverSetupExitCodes.cs  IDisplayService.cs  IconFactory.cs  StudioDisplayService.cs  SystemRefreshTrigger.cs  WinUsbDriverInstallService.cs
src/NitTray/Tray/: ModernTrayMenuRenderer.cs  TrayIconHost.cs
src/NitTray/ViewModels/: AboutViewModel.cs  DisplayViewModel.cs  MainViewModel.cs  RelayCommand.cs
src/app/: AboutWindow.xaml.cs  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NitTray.csproj  README.md
src/app/Models/: ConnectedDisplay.cs  DisplayEnumerationResult.cs
src/app/Services/: AppleDisplayService.Enumeration.cs  AppleDisplayService.cs  DiagnosticLog.cs  DriverInstallResult.cs  DriverSetupExitCodes.cs  SingleInstance.cs  SystemRefreshTrigger.cs  WinUsbDriverInstallService.cs
src/app/Tray/: ModernMenuRenderer.cs  TrayIconHost.cs
src/client/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml.cs  MainWindow.xaml  NitTray.csproj
src/driver/: README.md  build.ps1  main.c
src/native/: README.md  build.ps1  main.c
tools/: sign.ps1
tools/icons/: README.md  generate_icons.py
(+45 files in other folders)
